# jaxrts

./: .buildinfo  .drone.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  bibliography.html  cliff.toml  debug.py  development.html  first-spectrum.html  first_model.html  genindex.html  hnc.html  implementation-details.html  index.html  installing.html  latexandpython  measure_3d_fourier.py  models.html  module_overview.html  objects.inv  physics.html  py-modindex.html  pyproject.toml  save-and-load.html  search.html  searchindex.js  sg_execution_times.html  svt-hnc.html  tatus  usage.html
.github/workflows/: docs.yml
_autosummary/: jaxrts.absorption_edges_ionized_ions_data.html  jaxrts.analysis.ITCF.F.html  jaxrts.analysis.ITCF.__init__.html  jaxrts.analysis.ITCF.get_T.html  jaxrts.analysis.ITCF.html  jaxrts.analysis.ITCF.raw.html  jaxrts.analysis.ITCFT.html  jaxrts.analysis.ITCFT_grid.html  jaxrts.analysis.ITCF_from_setup.html  jaxrts.analysis.ITCF_fsum.html  jaxrts.analysis.ITCF_ssf.html  jaxrts.analysis.html  jaxrts.analysis.twoSidedLaplace.html  jaxrts.bound_free.J_BM_HR_approx.html  jaxrts.bound_free.J_BM_approx.html  jaxrts.bound_free.J_impulse_approx.html  jaxrts.bound_free.all_J_BM.html  jaxrts.bound_free.all_J_HR.html  jaxrts.bound_free.all_J_Schum75.html  jaxrts.bound_free.bm_bound_wavefunction.html  jaxrts.bound_free.html  jaxrts.collections.get_all_models.html  jaxrts.collections.get_all_models_list.html  jaxrts.collections.html  jaxrts.ee_localfieldcorrections.eelfc_dornheim2021.html  jaxrts.ee_localfieldcorrections.eelfc_farid.html  jaxrts.ee_localfieldcorrections.eelfc_geldartvosko.html  jaxrts.ee_localfieldcorrections.eelfc_hubbard.html  jaxrts.ee_localfieldcorrections.eelfc_interp_fortmann2010.html  jaxrts.ee_localfieldcorrections.eelfc_interp_gregori2007.html  jaxrts.ee_localfieldcorrections.eelfc_utsumiichimaru.html  jaxrts.ee_localfieldcorrections.html  jaxrts.ee_localfieldcorrections.xi_lfc_corrected.html  jaxrts.ee_localfieldcorrections_dornheim_2021.Activation.html  jaxrts.ee_localfieldcorrections_dornheim_2021.Ef.html  jaxrts.ee_localfieldcorrections_dornheim_2021.G_analytical.html  jaxrts.ee_localfieldcorrections_dornheim_2021.G_fit_wrap_extended.html  jaxrts.ee_localfieldcorrections_dornheim_2021.Groth_A.html  jaxrts.ee_localfieldcorrections_dornheim_2021.OnTop.html  jaxrts.ee_localfieldcorrections_dornheim_2021.alpha_extended.html  (+1396 more)
_downloads/01f78b1116e291464cfc17685f0cf510/: plot_HNC_exchange.ipynb
_downloads/0bf67ede4cb2d7cf45aba6ea0774dd69/: plot_See0_RPA.ipynb
_downloads/0c78a52337564b9b18dc382d964cb854/: plot_WR_expanded_ionization.ipynb
_downloads/116cae1dea3b3c75240fe15cd28d0902/: plot_See0_RPA_BM.py
_downloads/1631de1d5297fa08267fd9e9fb23a943/: plot_See0_QCSA.ipynb
_downloads/1c7a97c8af4dcfc504219c489c5bb97f/: plot_HNC_Gregori_Comparison.ipynb
_downloads/1e28fd55a9c9c8fe1404d296d7c8d035/: plot_k_dispersion.py
_downloads/1f238d1293038cbcc277bf795aae6316/: plot_BornCollision_Frequency.py
_downloads/229a6751aa09359d6acac47a97f2a712/: plot_BornCollision_Frequency.ipynb
_downloads/2b6a9471023a53d0cf240ec426af89d3/: plot_frequency_redistibution_correction.ipynb
_downloads/2c6adf9d7d1bc541dc872478d8a950aa/: plot_free_bound_scattering.py
_downloads/37d41e5a153b9cf3ca3bb33bea27e8d0/: plot_pauling_full_scattering_factors.ipynb
_modules/: index.html
_modules/jaxrts/: ipd.html  (+25 more)
_sources/: bibliography.rst.txt  development.rst.txt  first-spectrum.rst.txt  implementation-details.rst.txt  installing.rst.txt  models.rst.txt  sg_execution_times.rst.txt  svt-hnc.rst.txt  usage.rst.txt
doc/: Makefile
gen_examples/: index.html  plot_getting_started.html  plot_multi_component.html  plot_reproduce_Gregori2003_fig6.html  sg_execution_times.html
playground/: C_ionization.py  lin_ipd.py  mcss_comp.py  sams_file.py
tests/: __init__.py  dash.csv  dashdot.csv  fit_lmfit.py  helpers.py  longdash.csv  plot-data(0).csv  plot-data(1).csv  plot-data(2).csv  plot-data(3).csv  plot1-data(0).csv  plot1-data(1).csv  plot1-data(2).csv  solid.csv  test_analysis.py  test_bf_ionization_energies.py  test_citation.py  test_ee_lfc.py  test_electron_feature.py  test_elements.py  test_form_factors.py  test_free_free.py  test_helpers.py  test_hnc_static_structure_factors.py  test_hypernetted_chain.py  test_impulse_aproximation.py  test_ipd.py  test_jax_cache.py  test_math.py  test_models.py  test_more_mis.py  test_ogata.py  test_plasma_state.py  test_saha.py  test_saha_baggot.py  test_saha_baggott.py  test_saving.py  test_screening.py  test_setup.py  test_static_structure_factors.py  (+1 more)
tools/: JAXRTSViz.py  ionization_econfig.py  ionization_energies_calculation_FAC.py
(+2020 files in other folders)
