[project]
name = "jaxrts"
dynamic = [ "version" ]

description = ""
authors = [
  { name = "J. Lütgert", email = "julian.luetgert@uni-rostock.de" },
  { name = "S. Schumacher", email = "samuel.schumacher@uni-rostock.de" },
]
readme = "README.md"
dependencies = [
  "pint (>=0.24.4)",
  "numpy (>=2.2.2)",
  "matplotlib >= 3.10",
  "quadax >= 0.2.5",
  "jax (>=0.5.0)",
  "jaxlib (>=0.5.0)",
  "jpu (>=0.0.5)",
  "dill (>=0.4.0,<0.5.0)",
]
requires-python = "^3.10,<3.14"

[tool.poetry]
packages = [{ include = "jaxrts", from = "src" }]
version = "0.0.0"  # base version

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
ipython = "^8.32.0"
pytest = "^8.3.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "^0.15.0"
sphinx-toolbox = "^3.8.2"
sphinxcontrib-bibtex = "^2.6.3"
scienceplots = "^2.1.1"
hankel = "^1.2.2"

[tool.poetry.group.NN]
optional = true

[tool.poetry.group.NN.dependencies]
flax = "^0.10.4"
orbax = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+\.\d+\.\d+)'

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src/jaxrts" }
]
