[project]
name = "jaxrts"
dynamic = ["version"]

description = ""
authors = [
  { name = "J. Lütgert", email = "julian.luetgert@uni-rostock.de" },
  { name = "S. Schumacher", email = "samuel.schumacher@uni-rostock.de" },
]
readme = "README.md"
dependencies = [
  "pint (>=0.25)",
  "numpy (>=2.3.4)",
  "matplotlib (>=3.10.7)",
  "quadax (>=0.2.10)",
  "jax (>=0.5.0,<0.8.0)",
  "jaxlib (>=0.5.0,<0.8.0)",
  "jpu (>=0.0.5)",
  "dill (>=0.4.0,<0.5.0)",
  "pybtex @ git+https://bitbucket.org/pybtex-devs/pybtex",
]
requires-python = ">=3.11,<3.15"

[project.optional-dependencies]
NN = [
    "flax (>=0.10.4)",
    "orbax (>=0.1.9)",
]
gui = [
    "PyQt5"
]

[tool.poetry]
packages = [{ include = "jaxrts", from = "src" }]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^24.10.0"
ipython = "^8.37.0"
pytest = "^8.4.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "^0.15.0"
sphinx-toolbox = "^3.10.0"
sphinxcontrib-bibtex = "^2.6.5"
scienceplots = "^2.1.1"
hankel = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+\.\d+\.\d+)'

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src/jaxrts" }
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
  # Ambiguous variable names; for quantum numbers, this is annoying
  "E741",
  # Function uses loop variable; often, we have to define functions within
  # loops for jax; this is reducing the required arguments passed to the
  # function. Omit with care.
  "B023"
]
